[package]
name = "wtflip"
version = "0.1.0"
edition = "2021"
authors = ["David <75451291+dulkoss@users.noreply.github.com>"]
description = "A language in a Rust macro... or something."
license-file = "LICENSE"
repository = "https://github.com/daviddenhaan/wtflip"
homepage = "https://github.com/daviddenhaan/wtflip"
keywords = ["macro", "cursed", "bad"]